# alpacon-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LOGGING.md  README.md  main.py  main_http.py  main_sse.py  pyproject.toml  pytest.ini  server.py  test_result.md  workspace_config.json
.github/: copilot-instructions.md
.github/workflows/: docker.yml  publish.yml  test.yml
config/: token.json
docs/: README.md  api-reference.md  configuration.md  examples.md  excessive-branching-analysis.md  getting-started.md  installation-guide.md  installation.md  mfa-reauth-flow.md  troubleshooting.md
docs/superpowers/plans/: 2026-05-07-fill-minor-missing-tools.md
docs/superpowers/specs/: 2026-05-07-fill-minor-missing-tools-design.md
tests/: __init__.py  conftest.py  test_agent_actions.py  test_alert_tools.py  test_api_types.py  test_approval_tools.py  test_audit_tools.py  test_auth.py  test_auth_error_middleware.py  test_basic.py  test_build_config.py  test_cert_tools.py  test_command_tools.py  test_common.py  test_events_tools.py  test_health.py  test_http_client.py  test_iam_tools.py  test_input_validation.py  test_metrics_tools.py  test_mfa_precheck.py  test_oauth.py  test_package_tools.py  test_prompts.py  test_recovery_hints.py  test_resources.py  test_security_tools.py  test_server_tools.py  test_shutdown.py  test_simple_integration.py  test_system_info_tools.py  test_system_tools.py  test_token_manager.py  test_token_tools.py  test_tool_schemas.py  test_toolsets.py  test_webftp_tools.py  test_webhook_tools.py  test_websh_tools.py  test_work_session_tools.py  (+1 more)
tests/integration/: __init__.py  conftest.py  test_decorator_chain.py  test_error_scenarios.py  test_http_client_integration.py  test_tool_end_to_end.py
tools/: alert_tools.py  approval_tools.py  audit_tools.py  auth_tools.py  cert_tools.py  command_tools.py  events_tools.py  health_tools.py  iam_tools.py  metrics_tools.py  package_tools.py  prompts.py  resources.py  security_tools.py  server_tools.py  system_info_tools.py  system_tools.py  token_tools.py  webftp_tools.py  webhook_tools.py  websh_tools.py  websh_websocket.py  work_session_tools.py  workspace_tools.py
utils/: api_types.py  auth.py  auth_error_middleware.py  common.py  decorators.py  error_handler.py  health.py  http_client.py  logger.py  oauth.py  recovery_hints.py  security_settings.py  setup_wizard.py  token_manager.py  tool_annotations.py
