[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpacon-mcp"
version = "0.4.3"
description = "AI-Powered Server Management - Connect Claude, Cursor, and other AI tools directly to your Alpacon infrastructure"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Alpacon Team", email = "support@alpacon.io" },
]
maintainers = [
    { name = "Alpacon Team", email = "support@alpacon.io" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "alpacon",
    "server-management",
    "ai",
    "claude",
    "cursor",
    "infrastructure",
    "monitoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "mcp[cli]>=1.9.4",
    "httpx>=0.25.0",
    "websockets>=15.0.1",
]

[project.urls]
Homepage = "https://github.com/alpacax/alpacon-mcp"
Documentation = "https://github.com/alpacax/alpacon-mcp/blob/main/docs/README.md"
Repository = "https://github.com/alpacax/alpacon-mcp.git"
Issues = "https://github.com/alpacax/alpacon-mcp/issues"
Changelog = "https://github.com/alpacax/alpacon-mcp/blob/main/CHANGELOG.md"

[project.scripts]
alpacon-mcp = "main:main"
alpacon-mcp-sse = "main_sse:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]

ignore = [
    "E501",  # line too long (formatter handles this)
    "E722",  # Bare except
    "C901",  # Function is too complex
    "N806",  # Variable in function should be lowercase
    "B904",  # Within except, raise with from
    "S113",  # Request without timeout
    "S105",  # Possible hardcoded password (false positives in tests)
    "S110",  # try-except-pass detected
    "UP007", # Use X | Y for type annotations (prefer Optional for compatibility)
]

[tool.ruff.lint.per-file-ignores]
"*/test*.py" = ["S101", "S106", "S108", "S311", "S604"]
"__init__.py" = ["N999"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["tools", "utils", "server"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
